--- a/addons/we7_car/template/web/order_detail.html
+++ b/addons/we7_car/template/web/order_detail.html
@@ -81,8 +81,76 @@
         }
     }
     function worker_price(id){
-        var htm = "<input type='text' style='width:50px;' id='new_price"+id+"' />";
+        var htm = "<input type='text' style='width:50px;' id='new_price"+id+"' onblur='worker_price_change("+id+");' />";
         $("#service"+id).html(htm);
+    }
+    function worker_price_change(id){
+        var price = $("#new_price"+id).val();
+        var url = "{php echo $this->createWebUrl('orders',array('op'=>'worker_price_change'));}";
+        if(price >= 0){
+            $.ajax({
+                type : 'post',
+                url : url,
+                data : {'id' : id,'price' : price},
+                success : function(data){
+                    if(data == 111){
+                        alert("修改成功！");
+                        location.reload();
+                    }else{
+                        alert("服务器繁忙，请稍后重试！");
+                        location.reload();
+                    }
+                }
+            });
+        }
+    }
+    function goods_price(id){
+        var htm = "<input type='text' style='width:50px;' id='new_goods_price"+id+"' onblur='goods_price_change("+id+");' />";
+        $("#goods_price"+id).html(htm);
+    }
+    function goods_price_change(id){
+        var price = $("#new_goods_price"+id).val();
+        var url = "{php echo $this->createWebUrl('orders',array('op'=>'goods_price_change'));}";
+        if(price >= 0){
+            $.ajax({
+                type : 'post',
+                url : url,
+                data : {'id' : id,'price' : price},
+                success : function(data){
+                    if(data == 111){
+                        alert("操作成功！");
+                        location.reload();
+                    }else{
+                        alert("服务器繁忙，请稍后重试！");
+                        location.reload();
+                    }
+                }
+            });
+        }
+    }
+    function goods_quantity(id){
+        var htm = "<input type='text' style='width:50px;' id='new_goods_quantity"+id+"' onblur='goods_quantity_change("+id+");' />";
+        $("#goods_quantity"+id).html(htm);
+    }
+    function goods_quantity_change(id){
+        var quantity = $("#new_goods_quantity"+id).val();
+        var url = "{php echo $this->createWebUrl('orders',array('op'=>'goods_quantity_change'));}";
+        if(quantity >= 0){
+            $.ajax({
+                type : 'post',
+                url : url,
+                data : {'id' : id,'quantity' : quantity},
+                success : function(data){
+                    if(data == 111){
+                        alert("操作成功！");
+                        location.reload();
+                    }else{
+                        alert("服务器繁忙，请稍后重试！");
+                        location.reload();
+                    }
+                }
+            });
+        }
     }
 </script>
 <ul class="nav nav-tabs">
@@ -206,7 +274,7 @@
                                                 <th >产品</th>
                                                 <th >价格</th>
                                                 <th >数量</th>
-                                                <th >备注</th>
+                                                <th >小计</th>
                                                 <th >操作</th>
                                             </tr>
                                             </thead>
@@ -214,7 +282,7 @@
                                             {loop $services $s}
 
                                             <tr>
-                                                <td rowspan="2">
+                                                <td rowspan="{$s['count']}">
                                                     <p>
                                                         {$s['name']}
                                                     </p>
@@ -222,12 +290,12 @@
                                                         添加产品
                                                     </a>
                                                 </td>
-                                                <td rowspan="2" id="service{$s['id']}" ondblclick="worker_price({$s['id']});">{$s['worker_price']}</td>
+                                                <td rowspan="{$s['count']}" id="service{$s['id']}" {if $order_data['status'] <40 }ondblclick="worker_price({$s['id']});" {/if}>{$s['worker_price']}</td>
                                                 {loop $s['goods'] $goods}
-                                                <td>{$goods['name']}</td>
-                                                <td>￥{$goods['goods_price']}</td>
-                                                <td>{$goods['quantity']}</td>
-                                                <td></td>
+                                                <td>{$goods['name']}({$goods['goods_sn']})</td>
+                                                <td {if $order_data['status'] <40 }ondblclick="goods_price({$goods['id']});" {/if}>￥<span id="goods_price{$goods['id']}">{$goods['goods_price']}</span></td>
+                                                <td {if $order_data['status'] <40 }ondblclick="goods_quantity({$goods['id']});" {/if}id="goods_quantity{$goods['id']}">{$goods['quantity']}</td>
+                                                <td>￥{$goods['total_price']}</td>
                                                 <td>
                                                     <a href="javascript:display;" onclick="del({$goods['id']});">
                                                         <span class="glyphicon glyphicon-remove" title="删除"></span>
@@ -236,6 +304,24 @@
                                             </tr>
                                                 {/loop}
                                             {/loop}
+                                            <tr>
+                                                <td ></td>
+                                                <td ></td>
+                                                <td ></td>
+                                                <td ></td>
+                                                <td >
+                                                    <p>工时费总计</p>
+                                                    <p>产品总计</p>
+                                                    <p>订单总金额</p>
+                                                </td>
+                                                <td >
+                                                    <p>￥{$worker_price}</p>
+                                                    <p>￥{$total_price}</p>
+                                                    <p>￥{$order_price}</p>
+                                                </td>
+                                                <td>
+                                                </td>
+                                            </tr>
                                             </tbody>
                                         </table>
                                         <div class="row">
@@ -250,14 +336,26 @@
                             <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
                                 添加服务
                             </button>
-
+                            {if $order_data['status'] == 30}
+                            <a href="{php echo $this->createWebUrl('orders',array('id' => $order_data['id'],'op'=>'get_money'))}" onclick="return confirm('确认收款？');return false;" >
+                                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                    确认收款
+                                </button>
+                            </a>
+                            {else if $order_data['status'] == 40}
+                            <a href="{php echo $this->createWebUrl('orders',array('id' => $order_data['id'],'op'=>'leave'))}" onclick="return confirm('确认交车？');return false;" >
+                                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                                    确认交车
+                                </button>
+                            </a>
+                            {/if}
                             <!-- Modal -->
                             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                            <h4 class="modal-title" id="myModalLabel">添加服务</h4>
                                         </div>
                                         <div class="modal-body">
                                             <select class="form-control" onchange="find_services();" id="system">
